# random-distributions

./: .gitignore  README.md  pyproject.toml
examples/: bernoulli.txt  binomial.txt  erlang.txt  exponential.txt  gamma-1.txt  gamma-2.txt  geometric.txt  laplace.txt  poisson.txt  standard_normal.txt  triangular.txt  weibull.txt
random_distributions/: __init__.py  cli.py  dist_base.py  dist_binomial.py  dist_exponential.py  dist_geometric.py  dist_poisson.py  dist_standard_normal.py  dist_weibull.py  helpers.py  logger.py  plot.py  test.py
statistical_distribution_realizations/: __init__.py  cli.py  dist_base.py  dist_bernoulli.py  dist_binomial.py  dist_erlang.py  dist_exponential.py  dist_gamma.py  dist_geometric.py  dist_laplace.py  dist_poisson.py  dist_triangular.py  dist_weibull.py  helpers.py  logger.py  plot.py
tests/: test_random_distributions.py
