[tool.poetry]
name = "random-distributions"
version = "0.1.0"
description = "A Small Library of some Common Statistical Distributions Implemented in Python"
authors = ["Nikhil Anand <mail@nikhil.io>"]

[tool.poetry.dependencies]
python = "^3.9"
seaborn = "^0.11.1"
pandas = "^1.2.4"
click = "^7.1.2"
coloredlogs = "^15.0"

[tool.poetry.scripts]
generate = "random_distributions.cli:entry_point"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
