[tool.poetry]
name = "statistical-distribution-realizations"
version = "0.1.0"
description = "A Small Library of some Common Statistical Distributions"
authors = ["Nikhil Anand <mail@nikhil.io>"]

[tool.poetry.dependencies]
python = "^3.9"
seaborn = "^0.11.1"
pandas = "^1.2.4"
click = "^7.1.2"
progressbar2 = "^3.53.1"

[tool.poetry.scripts]
realize = "statistical_distribution_realizations.cli:entry_point"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
